// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add an item to wishlist - 2 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "",
      "name": "Hola",
      "price": 203.1,
    },
  },
  Object {
    "op": "replace",
    "path": "/items/0/name",
    "value": "kkk",
  },
]
`;

exports[`can add an item to wishlist 1`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Hola",
        "price": 203.1,
      },
    ],
  },
]
`;
